--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  cursor: pointer;
 }
 
 /* Portfolio buttons */
@@ -109,6 +110,7 @@ body {
 .button-portfolio {
   background-color: var(--third-background-color);
   color: var(--title-text-color);
+  cursor: pointer;
 }
 
 .button-portfolio:hover,
